--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,6 +9,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.0.2/chart.min.js"></script>
+        <script src="../static/base.js"></script>
+        <link rel="stylesheet" href="../static/base.css">
         <title>{% block title %}{% endblock %}</title>
     
         {% block style %}{% endblock %}
@@ -16,7 +18,7 @@
     </head>
     <body>
         <nav>
-            {% block page_title %}{% endblock %}
+            {% block heading %}{% endblock %}
         </nav>
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
