--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-{% block style %}<link rel="stylesheet" href="../static/home.css">{% endblock %}
-{% block page_title %}
+{% block style %}{% endblock %}
+{% block title %}Home{% endblock %}
+
+{% block heading %}
 <h1>Home</h1>
 {% endblock %}
