--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,6 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.0.2/chart.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="../static/base.js"></script>
         <link rel="stylesheet" href="../static/base.css">
         <title>{% block title %}{% endblock %}</title>
