--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -13,43 +13,73 @@
 
 {% block main %}
 <div class="home-block">
-    <div class="table-box">
-        <h3>Usage Entries</h3>
-        <table>
-            <tr>
-                <th>Entry ID</th>
-                <th>User ID</th>
-                <th>Date and Time</th>
-                <th>Usage</th>
-            </tr>
-            {% for entry in usage %}
-            <tr>
-                <td>{{ entry.id }}</td>
-                <td>{{ entry.client_id }}</td>
-                <td>{{ entry.datetime }}</td>
-                <td>{{ entry.usage }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
-    <div class="table-box">
-        <h3>Peak Entries</h3>
-        <table>
-            <tr>
-                <th>Entry ID</th>
-                <th>User ID</th>
-                <th>Date and Time</th>
-                <th>Peak</th>
-            </tr>
-            {% for entry in peak %}
-            <tr>
-                <td>{{ entry.id }}</td>
-                <td>{{ entry.client_id }}</td>
-                <td>{{ entry.datetime }}</td>
-                <td>{{ entry.peak }}</td>
-            </tr>
-            {% endfor %}
-        </table>
+    <div class="chart-box">
+        <canvas class="myChart" id="myChart"></canvas>
     </div>
 </div>
+{% endblock %}
+
+
+{% block javascript %}
+<script>
+    const labels = {{ xlabels | safe }};
+    
+    const data = {
+        labels: labels,
+        datasets: [{
+            label: "Usage (Wh)",
+            backgroundColor: 'rgb(0, 83, 119)',
+            borderColor: 'rgb(255, 99, 132)',
+            data: {{ usage_values | safe }},
+            yAxisID: 'y',
+        },
+        {
+            label: "Peak (W)",
+            backgroundColor: 'rgb(6, 167, 125)',
+            borderColor: 'rgb(255, 99, 120)',
+            data: {{ peak_values | safe }},
+            yAxisID: 'y1',
+        }]
+    };
+
+    const config = {
+        type: 'bar',
+        data: data,
+        options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            plugins: {
+                legend: {
+                    position: 'top',
+                },
+                title: {
+                    display: true,
+                    text: 'Power usage vs peak for {{ date | safe }}'
+                }
+            },
+            scales:{
+                y: {
+                    type: 'linear',
+                    display: true,
+                    position: 'left',
+                },
+                y1: {
+                    type: 'linear',
+                    display: true,
+                    position: 'right',
+
+                    // grid line settings
+                    grid: {
+                    drawOnChartArea: false, // only want the grid lines for one axis to show up
+                    },
+                },
+            } 
+        }
+    };
+
+    var ctx = document.getElementById("myChart").getContext("2d");
+
+    var barchart = new Chart(ctx, config);
+
+</script>
 {% endblock %}
