--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -20,6 +20,9 @@
     <body>
         <nav>
             {% block heading %}{% endblock %}
+            <div class="nav-radios">
+                {% block navradios %}{% endblock %}
+            </div>
             <div class="navlinks">
                 {% block navlinks %}{% endblock %}
             </div>
