--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,6 +2,29 @@
 {% block style %}{% endblock %}
 {% block title %}Home{% endblock %}
 
+{% block navradios %}
+<form id="period-form" class="period-form" action="" method="POST">
+    <div class="radios-tab">
+        <h4 class="radios-title">Period:</h4>
+        <div class="radios">
+            {% if hours == 24 %}
+            <label for="radio-24h"><input onchange="reloadPage()" id="radio-24h" value="24" type="radio" name="period-selection" checked>Last 24h</label>
+            <label for="radio-72h"><input onchange="reloadPage()" id="radio-72h" value="72" type="radio" name="period-selection">Last 72h</label>
+            <label for="radio-1w"><input onchange="reloadPage()" id="radio-1w" value="168" type="radio" name="period-selection">Last Week</label>
+            {% elif hours == 72 %}
+            <label for="radio-24h"><input onchange="reloadPage()" id="radio-24h" value="24" type="radio" name="period-selection">Last 24h</label>
+            <label for="radio-72h"><input onchange="reloadPage()" id="radio-72h" value="72" type="radio" name="period-selection" checked>Last 72h</label>
+            <label for="radio-1w"><input onchange="reloadPage()" id="radio-1w" value="168" type="radio" name="period-selection">Last Week</label>
+            {% elif hours == 168 %}
+            <label for="radio-24h"><input onchange="reloadPage()" id="radio-24h" value="24" type="radio" name="period-selection">Last 24h</label>
+            <label for="radio-72h"><input onchange="reloadPage()" id="radio-72h" value="72" type="radio" name="period-selection">Last 72h</label>
+            <label for="radio-1w"><input onchange="reloadPage()" id="radio-1w" value="168" type="radio" name="period-selection" checked>Last Week</label>
+            {% endif %}
+        </div>
+    </div>
+</form>
+{% endblock %}
+
 {% block navlinks %}
 <a href="{{ url_for('views.auth') }}">Authenticate</a>
 <a href="{{ url_for('views.logout') }}">Logout</a>
@@ -22,6 +45,14 @@
 
 {% block javascript %}
 <script>
+
+    function reloadPage(){
+
+        var periodForm = document.getElementById("period-form");
+        periodForm.submit();
+
+    }
+
     const labels = {{ xlabels | safe }};
     
     const data = {
@@ -50,16 +81,22 @@
             maintainAspectRatio: false,
             plugins: {
                 legend: {
-                    position: 'top',
+                    position: 'top'
                 },
                 title: {
                     display: true,
-                    text: 'Power usage vs peak for {{ date | safe }}'
+                    text: 'Power usage vs peak for the last {{ hours | safe }} hours',
+                    font: {
+                        size: 20,
+                        family: "Poppins"
+                    }
+
                 }
             },
             scales:{
                 y: {
                     type: 'linear',
+                    title: "Usage (Wh)",
                     display: true,
                     position: 'left',
                 },
