--- a/website/templates/analysis.html
+++ b/website/templates/analysis.html
@@ -1,38 +1,15 @@
 {% extends 'base.html' %}
 {% block style %}{% endblock %}
-{% block title %}Home{% endblock %}
-
-{% block navradios %}
-<form id="period-form" class="period-form" action="" method="POST">
-    <div class="radios-tab">
-        <h4 class="radios-title">Period:</h4>
-        <div class="radios">
-            {% if hours == 24 %}
-            <label for="radio-24h"><input onchange="reloadPage()" id="radio-24h" value="24h" type="radio" name="period-selection" checked>Last 24h</label>
-            <label for="radio-72h"><input onchange="reloadPage()" id="radio-72h" value="72h" type="radio" name="period-selection">Last 72h</label>
-            <label for="radio-1w"><input onchange="reloadPage()" id="radio-1w" value="week" type="radio" name="period-selection">Last Week</label>
-            {% elif hours == 72 %}
-            <label for="radio-24h"><input onchange="reloadPage()" id="radio-24h" value="24h" type="radio" name="period-selection">Last 24h</label>
-            <label for="radio-72h"><input onchange="reloadPage()" id="radio-72h" value="72h" type="radio" name="period-selection" checked>Last 72h</label>
-            <label for="radio-1w"><input onchange="reloadPage()" id="radio-1w" value="week" type="radio" name="period-selection">Last Week</label>
-            {% elif hours == 168 %}
-            <label for="radio-24h"><input onchange="reloadPage()" id="radio-24h" value="24h" type="radio" name="period-selection">Last 24h</label>
-            <label for="radio-72h"><input onchange="reloadPage()" id="radio-72h" value="72h" type="radio" name="period-selection">Last 72h</label>
-            <label for="radio-1w"><input onchange="reloadPage()" id="radio-1w" value="week" type="radio" name="period-selection" checked>Last Week</label>
-            {% endif %}
-        </div>
-    </div>
-</form>
-{% endblock %}
+{% block title %}Analysis{% endblock %}
 
 {% block navlinks %}
-<a href="{{ url_for('views.analysis') }}">Analysis</a>
+<a href="{{ url_for('views.home') }}">Home</a>
 <a href="{{ url_for('views.auth') }}">Authenticate</a>
 <a href="{{ url_for('views.logout') }}">Logout</a>
 {% endblock %}
 
 {% block heading %}
-<h1>Home</h1>
+<h1>Analysis</h1>
 {% endblock %}
 
 {% block main %}
@@ -42,7 +19,6 @@
     </div>
 </div>
 {% endblock %}
-
 
 {% block javascript %}
 <script>
@@ -86,7 +62,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Power usage vs peak for the last {{ hours | safe }} hours',
+                    text: 'Average Daily Power Consumption',
                     font: {
                         size: 20,
                         family: "Poppins"
@@ -97,12 +73,13 @@
             scales:{
                 y: {
                     type: 'linear',
-                    title: "Usage (Wh)",
+                    title: "y",
                     display: true,
                     position: 'left',
                 },
                 y1: {
                     type: 'linear',
+                    title: 'y1',
                     display: true,
                     position: 'right',
 
