--- a/website/static/base.css
+++ b/website/static/base.css
@@ -1,4 +1,5 @@
 @import "home.css";
+@import "analysis.css";
 
 * {
     margin: 0;
@@ -37,6 +38,10 @@ nav a{
 main{
     padding: 2rem;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 .flash_success, .flash_error{
     position: absolute;
