--- a/website/templates/analysis.html
+++ b/website/templates/analysis.html
@@ -9,13 +9,22 @@
 {% endblock %}
 
 {% block heading %}
-<h1>Analysis</h1>
+<h1>Analysis and Quotation</h1>
 {% endblock %}
 
 {% block main %}
-<div class="home-block">
+<div class="analysis-main-box">
     <div class="chart-box">
         <canvas class="myChart" id="myChart"></canvas>
+    </div>
+    <div class="quote-results">
+        <h2>Minimum Required Parameters</h2>
+        {% for element in quotation_obj.minimum_parameters %}
+        <h3>{{ element }}</h3>
+        {% for param in quotation_obj.minimum_parameters[element] %}
+        <p>{{ param }}: {{ quotation_obj.minimum_parameters[element][param] }}</p>
+        {% endfor %}
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
