--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -36,7 +36,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="home-block">
+<div class="home-chart-wrapper">
     <div class="chart-box">
         <canvas class="myChart" id="myChart"></canvas>
     </div>
