--- a/website/templates/analysis.html
+++ b/website/templates/analysis.html
@@ -13,18 +13,43 @@
 {% endblock %}
 
 {% block main %}
-<div class="analysis-main-box">
+<h1 class="content-heading">Analysis and Quotation</h1>
+<p class="intro-text">Find here an analysis of your home's power consumption since installing the measurement device. The graph below shows the worst-case scenario of power consumption per 30-minute period in a 24-hour day. The data shown is not from a single day, but rather aggregated from all of the days for which the tool was installed. The usage and peak values displayed here in each 30-min period are the maximum all-time values for that specific time-period.</p>
+<div class="analysis-chart-wrapper">
     <div class="chart-box">
         <canvas class="myChart" id="myChart"></canvas>
     </div>
-    <div class="quote-results">
-        <h2>Minimum Required Parameters</h2>
-        {% for element in quotation_obj.minimum_parameters %}
-        <h3>{{ element }}</h3>
-        {% for param in quotation_obj.minimum_parameters[element] %}
-        <p>{{ param }}: {{ quotation_obj.minimum_parameters[element][param] }}</p>
-        {% endfor %}
-        {% endfor %}
+</div>
+<h1 class="body-heading">Generate a Quotation</h1>
+<p class="intro-text">The goal of this quotation tool is to give you, the homeowner, an estimation of what it will cost to install a solar system to power your home during load shedding. The tool uses the conservative data shown in the chart above to make its calculation. Please use the form below to generate your quotation.</p>
+<div class="quote-box">
+    <div class="quote-form-box">
+        <h2 class="body-heading">Quotation Options</h2>
+        <p class="intro-text">Use this form to generate a personalized quotation:</p>
+        <form class="quote-form" method="POST" action="{{ url_for('views.analysis') }}">
+            <h4 class="body-heading">For how many hours at a time do you want your solar system to power your home?</h4>
+            <label for="pwrHours2"><input class="pwrHours-radio" type="radio" id="pwrHours2" name="pwrHours" value="2" required>2 Hours</label>
+            <label for="pwrHours3"><input class="pwrHours-radio" type="radio" id="pwrHours3" name="pwrHours" value="3">3 Hours</label>
+            <label for="pwrHours4"><input class="pwrHours-radio" type="radio" id="pwrHours4" name="pwrHours" value="4">4 Hours</label>
+            <label for="pwrHours5"><input class="pwrHours-radio" type="radio" id="pwrHours5" name="pwrHours" value="5">5 Hours</label>
+            <h4 class="body-heading">How many hours of direct sunlight does your roof see on an average day?</h4>
+            <label for="chargeHours4"><input class="chargeHours-radio" type="radio" id="chargeHours4" name="chargeHours" value="4" required>4 Hours</label>
+            <label for="chargeHours5"><input class="chargeHours-radio" type="radio" id="chargeHours5" name="chargeHours" value="5">5 Hours</label>
+            <label for="chargeHours6"><input class="chargeHours-radio" type="radio" id="chargeHours6" name="chargeHours" value="6">6 Hours</label>
+            <label for="chargeHours7"><input class="chargeHours-radio" type="radio" id="chargeHours7" name="chargeHours" value="7">7 Hours</label>
+            <input class="quotation-submit" type="submit" value="Generate Quotation">
+        </form>
+    </div>
+    <div class="quote-results-box">
+        {% if quote_results %}
+            <h2 class="body-heading">Your Quotation</h2>
+            {% for element in quotation_obj.minimum_parameters %}
+                <h3 class="body-subheading">{{ element }}</h3>
+                {% for param in quotation_obj.minimum_parameters[element] %}
+                <p>{{ param }}: {{ quotation_obj.minimum_parameters[element][param] }}</p>
+                {% endfor %}
+            {% endfor %}
+        {% endif %}
     </div>
 </div>
 {% endblock %}
@@ -71,7 +96,7 @@
                 },
                 title: {
                     display: true,
-                    text: 'Average Daily Power Consumption',
+                    text: 'Worst-Case Scenario Power Consumption',
                     font: {
                         size: 20,
                         family: "Poppins"
