--- a/website/static/analysis.css
+++ b/website/static/analysis.css
@@ -5,18 +5,20 @@
 }
 .quote-box{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-top: 1rem;
     width: 100%;
-    justify-content: center;
-    align-items: top;
+    /* justify-content: center; */
+    align-items: center;
 }
 .quote-form-box{
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: lightgrey;
+    background-color: #f1f1f1;
+    /* border: medium solid #005377; */
+    border-radius: 1rem;
     margin: 1rem;
     padding: 1rem;
     height: min-content;
@@ -27,8 +29,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: lightgrey;
-    padding: 1rem;
+    /* background-color: lightgrey; */
+    /* justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 100%; */
+    padding: 1rem 2rem;
 }
 .quote-form{
     display: flex;
@@ -41,8 +46,42 @@
 }
 .quotation-submit{
     width: min-width;
-    padding: 0.5rem 2rem;
-    margin: 1rem;
+    padding: 0.3rem 2rem;
+    margin: 2rem 1rem 1rem 1rem;
     align-self: center;
+    color: #005377;
+    border: medium solid #005377;
+    border-radius: 1rem;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    /* background-color: #005377; */
+}
+/* .parameters-container{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-auto-rows: 1fr;
+    justify-content: space-evenly;
+} */
+.param-box{
+    width: 100%;
+    margin: 1rem;
+    padding-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding-left: 1rem;
+    justify-content: center;
+    border: 2px solid #005377;
+    border-radius: 1rem;
+    text-align: left;
+}
+.param-box *{
+    /* text-align: left; */
+} 
+.param-intro-text{
+    margin-bottom: 0.5rem;
 }
 
