--- a/website/static/base.css
+++ b/website/static/base.css
@@ -17,7 +17,9 @@ flex-direction: column;
 align-items: center;
 font-family: "Poppins", sans-serif;
 }
-
+p, h1, h2, h3, h4, label{
+    color: #005377;
+}
 nav{
     width: 100%;
     padding: 1rem 5rem;
