--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -90,7 +90,8 @@
                     font: {
                         size: 20,
                         family: "Poppins"
-                    }
+                    },
+                    color: '#005377'
 
                 }
             },
