--- a/website/static/analysis.css
+++ b/website/static/analysis.css
@@ -68,11 +68,10 @@
 .param-box{
     width: 100%;
     margin: 1rem;
-    padding-bottom: 1rem;
+    padding: 0 1rem 1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: left;
-    padding-left: 1rem;
     justify-content: center;
     border: 2px solid #005377;
     border-radius: 1rem;
@@ -83,8 +82,20 @@
 } 
 .param-intro-text{
     margin-bottom: 0.5rem;
+    line-height: 1.3;
 }
 .quote-intro-text{
     text-align: center;
 }
-
+table, th, td{
+    border-collapse: collapse;
+}
+th, td{
+    color: #005377;
+}
+th{
+    border-bottom: 1px solid #005377;
+}
+.hl_top{
+    border-top: 1px solid #005377;
+}
