--- a/website/templates/analysis.html
+++ b/website/templates/analysis.html
@@ -5,6 +5,7 @@
 {% block navlinks %}
 <a href="{{ url_for('views.home') }}">Home</a>
 <a href="{{ url_for('views.auth') }}">Authenticate</a>
+<a href="{{ url_for('views.csv') }}">Download Full CSV</a>
 <a href="{{ url_for('views.logout') }}">Logout</a>
 {% endblock %}
 
